<resources>
    <string name="smart_home_security">Smart home security\nfor everyone</string>
    <string name="already_member">Already have an account?</string>
    <string name="watch_live">Watch Live</string>
    <string name="watch_live_limit">Are you still watching?</string>
    <string name="watch_live_limit_button">Yes, I\'m still watching</string>
    <string name="yesterday">Yesterday</string>
    <string name="settings">Settings</string>
    <string-array name="avatar_selection_array">
        <item>Take photo</item>
        <item>Choose photo</item>
    </string-array>
    <string name="canary_is_offline">Canary is offline</string>
    <string name="sound_siren">Sound siren</string>
    <string name="make_call">Emergency call</string>
    <string name="tap_leave_a_comment">Tap to leave a comment…</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_period">Sign in.</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="email_address">Email address</string>
    <string name="email_address_hint">your@email.com</string>
    <string name="email">Email</string>
    <string name="smartphone_number">Mobile phone</string>
    <string name="next">Next</string>
    <string name="connect_wifi">Connect with Wi-Fi</string>
    <string name="connect_with_ethernet">Connect with Ethernet</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="cancel">Cancel</string>
    <string name="wifi_password">Wi-Fi password</string>
    <string name="enter_password">Enter password for \""%1$s"\"</string>
    <string name="prepare_canary">Prepare Canary</string>
    <string name="location_name">Location Name</string>
    <string name="loading_homehealth_data">Loading HomeHealth data…</string>
    <string name="invitation_details">Invitation details</string>
    <string name="change_password">Reset password</string>
    <string name="change_password_title">Reset password</string>
    <string name="change_language">Language</string>
    <string name="location_member">Location member</string>
    <string name="location_edit_hint">Canary uses your location to determine your address, local emergency numbers, and to automatically switch modes.</string>
    <string name="device_connection">Device connection</string>
    <string name="call">Call</string>
    <string name="text_message">Text message</string>
    <string name="remove_this_bookmark">Remove this bookmark?</string>
    <string name="remove_bookmark">Remove bookmark</string>
    <string name="unsave_confirmation_dsc_days">This event will stay on the location timeline for %1$d days after it took place.</string>
    <string name="unsave_confirmation_dsc_hours">This event will stay on the location timeline for %1$d hours after it took place.</string>
    <string name="entry_older_than">This event is older than 7 days and will be deleted from your timeline if it is unsaved.</string>
    <string name="entry_older_than_days">This event is older than %1$d days and will no longer be visible on the location timeline.</string>
    <string name="entry_older_than_hours">This event is older than %1$d hours and will no longer be visible on the location timeline.</string>
    <string name="connected">Connected</string>
    <string name="you">You</string>
    <string name="invalid_login_credentials">Invalid login credentials.\nPlease check email address and password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_follow_up">Follow the reset instructions in your email to continue.</string>
    <string name="today">Today</string>
    <string name="other">Other</string>
    <string name="help_your_canary">Help improve Canary\nby tagging events.</string>
    <string name="this_contains">This clip contains:</string>
    <string name="sorry">Sorry</string>
    <string name="connecting_nodots">Connecting</string>
    <string name="no_internet_connection">Unable to connect at this time</string>
    <string name="continue_text">Continue</string>
    <string name="home_health">HomeHealth</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="air_quality">Air Quality</string>
    <string name="error_playing_video">Error playing video.</string>
    <string name="indoor_humidity_basics">Indoor humidity basics</string>
    <string name="indoor_humidity_verbiage">Canary measures your home\'s humidity, which is an indication of how much water vapor is in the air. Humidity goes hand in hand with temperature, and can affect a number of health and structural factors in your house or apartment.</string>
    <string name="indoor_air_quality_basics">Indoor air quality basics</string>
    <string name="indoor_air_quality_verbiage">Canary assesses your home\'s air quality the amount of contaminants in the air and shows you what\'s inside and outside the normal range for your specific environment.</string>
    <string name="indoor_air_pollutants">Indoor Air Pollutants</string>
    <string name="indoor_air_pollutants_verbiage">Canary detects overall changes in air quality caused by pollutants including:</string>
    <string name="calibrating_air_quality">calibrating the sensor</string>
    <string name="calibrating_air_quality_verbiage">Keep Canary\'s air quality sensor calibrated by ventilating your home with outside air. Make a habit of opening windows or doors to let fresh air in and to help Canary stay as accurate as possible.</string>
    <string name="iso_butane">iso-butane</string>
    <string name="hydrogen">hydrogen</string>
    <string name="methane">methane</string>
    <string name="ethanol">ethanol</string>
    <string name="carbon_monoxide">carbon monoxide</string>
    <string name="cigarette_smoke">cigarette smoke</string>
    <string name="cooking_odor">cooking odors</string>
    <string name="establishing_connection">Your Canary All-in-One is establishing a secure connection</string>
    <string name="privacy">Privacy</string>
    <string name="canary_three_modes">Canary has 3 modes.</string>
    <string name="timeline">Timeline</string>
    <string name="bookmark_events">Bookmarked Events</string>
    <string name="video_all_show_here">Videos, mode changes, comings, and goings - all show up here</string>
    <string name="location_at_your_services">Location, at your service.</string>
    <string name="canary_connected_updating">Your Canary All-in-One is connected to the internet. Unplug both ends of the yellow cable to complete setup.</string>
    <string name="get_help">Get help</string>
    <string name="device_is_offline">Device is offline</string>
    <string name="time_travel_error">Preparing sensor data.</string>
    <string name="home_health_explaination">HomeHealth graphs and history work best after 24 hours. Check back again tomorrow!</string>
    <string name="canary_needs_internet">How will you connect your device to the internet?</string>
    <string name="collecting_homehealth_data">Collecting HomeHealth data</string>
    <string name="review_on_play_store">Review on the Play Store</string>
    <string name="visit_canary">Visit Canary.is</string>
    <string name="compliance_notices">Compliance Notices</string>
    <string name="about_canary">About Canary</string>
    <string name="eula">Eula</string>
    <string name="accept">Accept</string>
    <string name="please_accept">Please accept Canary\'s terms and policies before proceeding.</string>
    <string name="terms_of_service_label">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="end_user_agreement">End User License Agreement</string>
    <string name="logout">Logout</string>
    <string name="continue_without_password">Continue without password?</string>
    <string name="recommend_secure_network">Canary strongly recommends using your device with a password-protected Wi-Fi network.</string>
    <string name="cannot_select_hidden_network">Canary cannot connect to hidden Wi-Fi networks during setup.</string>
    <string name="error_occurred_ota">Error occurred during OTA, please try again.</string>
    <string name="air">Air</string>
    <string name="save">Save</string>
    <string name="change_internet">How will you change Canary\'s\nconnection to the internet?</string>
    <string name="okay">Okay</string>
    <string name="power_cycle_canary">Next, unplug the micro-USB\npower adapter from your Canary\nand then plug it back in. Canary\nflashes yellow when it is ready.</string>
    <string name="call_ems">Call ambulance</string>
    <string name="call_police">Call police</string>
    <string name="call_fire">Call fire department</string>
    <string name="sure_call_police">Are you sure you want to call the Police Department?</string>
    <string name="sure_call_fire">Are you sure you want to call the Fire Department?</string>
    <string name="sure_call_ems">Are you sure you want to call an Ambulance?</string>
    <string name="yes_call_ems">Yes, Call EMS</string>
    <string name="yes_call_fire">Yes, Call Fire</string>
    <string name="yes_call_police">Yes, Call Police</string>
    <string name="retry_setup">Retry setup</string>
    <string name="somethings_wrong">Something\'s wrong.</string>
    <string name="country_code">Country code</string>
    <string name="add_emergency_numbers">Add emergency numbers…</string>
    <string name="emergency_numbers">Emergency numbers</string>
    <string name="done">Done</string>
    <string name="address_1">Address Line 1</string>
    <string name="address_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state_providence">State/Province/Region</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="beach_house_cabin_etc">Beach House, Cabin, etc.</string>
    <string name="apartment_unit_floor">Apartment, unit, floor, etc.</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="show_passwords">Show passwords</string>
    <string name="add_photo">Add photo</string>
    <string name="insurance">Insurance</string>
    <string name="recording_settings_header">Recording range</string>
    <string name="recording_settings_body">To preserve battery, capture video closer to the device. Or use more battery and capture all motion within the range of the device.</string>
    <string name="recording_settings_body_header">record motion in…</string>
    <string name="manage_my_membership">Manage my Membership</string>
    <string name="sound_all_sirens">Sound all location sirens</string>
    <string name="sound_this_siren">Sound this siren only</string>
    <string name="flex_doesnt_have_siren">Your Canary Flex does not have a siren, but you can sound the sirens of other devices in this location.</string>
    <string name="remove_location">Remove location</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="edit_geofence">Edit geofence</string>
    <string name="edit_address">Edit address</string>
    <string name="add_more_people_question">Add more people?</string>
    <string name="add_a_person">Add a person</string>
    <string name="add_more_people_dsc">Canary works best when everyone in your home connects. Use this shortcut to quickly add people to Canary.</string>
    <string name="reset_password_dsc">Resetting your password will automatically sign you out of all your devices, including third party integrations.</string>
</resources>