<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="is.yranac.canary.util.Utils" />

        <import type="is.yranac.canary.model.device.DeviceType" />

        <variable
            name="isLocationSetup"
            type="boolean" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@+id/next_btn"
            android:layout_alignParentTop="true"
            android:layout_alignWithParentIfMissing="true"
            android:background="@color/white"
            android:isScrollContainer="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/standard_margin"
                android:paddingRight="@dimen/standard_margin">

                <is.yranac.canary.ui.views.EditTextWithLabel
                    android:id="@+id/location_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standard_row_height"
                    android:gravity="center_vertical"
                    app:hint="@string/beach_house_cabin_etc"
                    app:label="@string/location_name" />

                <is.yranac.canary.ui.views.EditTextWithLabel
                    android:id="@+id/location_address"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standard_row_height"
                    android:gravity="center_vertical"
                    app:label="@string/address_1" />


                <is.yranac.canary.ui.views.EditTextWithLabel
                    android:id="@+id/location_address_two"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standard_row_height"
                    android:gravity="center_vertical"
                    app:hint="@string/apartment_unit_floor"
                    app:label="@string/address_2" />


                <is.yranac.canary.ui.views.EditTextWithLabel
                    android:id="@+id/location_city"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standard_row_height"
                    android:gravity="center_vertical"
                    app:label="@string/city" />

                <is.yranac.canary.ui.views.EditTextWithLabel
                    android:id="@+id/location_state"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standard_row_height"
                    android:gravity="center_vertical"
                    app:label="@string/state_providence" />


                <is.yranac.canary.ui.views.EditTextWithLabel
                    android:id="@+id/location_postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standard_row_height"
                    android:gravity="center_vertical"
                    app:label="@string/postal_code" />


                <is.yranac.canary.ui.views.EditTextWithLabel
                    android:id="@+id/location_country"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/standard_row_height"
                    android:gravity="center_vertical"
                    app:editable="false"
                    app:label="@string/country" />

            </LinearLayout>
        </ScrollView>

        <is.yranac.canary.ui.views.ButtonPlus
            android:id="@+id/next_btn"
            style="@style/new_green_rect_action_button"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            android:text="@string/next"
            android:visibility="@{isLocationSetup ? View.VISIBLE : View.GONE }" />


    </RelativeLayout>

</layout>