<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/standard_margin"
            android:paddingRight="@dimen/standard_margin">

            <is.yranac.canary.ui.views.TextViewPlus
                style="@style/large_text_view"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:text="@string/please_accept"/>

            <is.yranac.canary.ui.views.TextViewPlus
                android:id="@+id/terms_btn"
                style="@style/terms_btn_style"
                android:layout_marginTop="10dp"
                android:text="@string/terms_of_service_label" />

            <is.yranac.canary.ui.views.TextViewPlus
                android:id="@+id/privacy_policy_btn"
                style="@style/terms_btn_style"
                android:layout_marginTop="5dp"
                android:text="@string/privacy_policy" />

            <is.yranac.canary.ui.views.TextViewPlus
                android:id="@+id/end_user_btn"
                style="@style/terms_btn_style"
                android:layout_marginTop="5dp"
                android:text="@string/end_user_agreement" />

        </LinearLayout>

        <is.yranac.canary.ui.views.ButtonPlus
            android:id="@+id/i_accept_btn"
            style="@style/new_green_rect_action_button"
            android:layout_marginTop="30dp"
            android:text="@string/accept" />

        <is.yranac.canary.ui.views.ButtonPlus
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@color/white"
            android:stateListAnimator="@null"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:customFont="Gibson.otf" />

    </LinearLayout>
</layout>
