<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingEnd="@dimen/standard_margin"
        android:paddingStart="@dimen/standard_margin">


        <is.yranac.canary.ui.views.EditTextWithLabel
            android:id="@+id/old_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_row_height"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            app:hint="@string/old_password"
            app:label="@string/old_password" />

        <is.yranac.canary.ui.views.EditTextWithLabel
            android:id="@+id/new_password_text_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_row_height"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            app:hint="@string/new_password"
            app:label="@string/new_password" />

        <RelativeLayout
            android:id="@+id/show_password_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_row_height">

            <is.yranac.canary.ui.views.TextViewPlus
                style="@style/large_text_view"
                android:layout_centerVertical="true"
                android:text="@string/show_passwords" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/show_wifi_password_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:duplicateParentState="true"
                android:focusable="false"
                android:theme="@style/MySwitch" />
        </RelativeLayout>

        <is.yranac.canary.ui.views.ButtonPlus
            android:id="@+id/change_password_button"
            style="@style/new_green_rect_action_button"
            android:layout_marginTop="30dp"
            android:text="@string/change_password" />


        <is.yranac.canary.ui.views.TextViewPlus
            style="@style/light_small_text_view"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/reset_password_dsc" />
    </LinearLayout>
</layout>
