<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="@dimen/standard_margin"
        android:paddingStart="@dimen/standard_margin"
        android:paddingTop="@dimen/large_margin">

        <is.yranac.canary.ui.views.TextViewPlus
            style="@style/large_text_view"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/add_more_people_question" />

        <ImageView
            android:id="@+id/alert_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:src="@drawable/add_icon_stroke" />

        <is.yranac.canary.ui.views.TextViewPlus
            style="@style/setup_medium_text_view_black"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/add_more_people_dsc" />

        <is.yranac.canary.ui.views.ButtonPlus
            android:id="@+id/add_btn"
            style="@style/base_rectangle_button"
            android:background="@drawable/gray_rect_background"
            android:text="@string/add_a_person"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <is.yranac.canary.ui.views.ButtonPlus
            android:id="@+id/done_btn"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@color/white"
            android:stateListAnimator="@null"
            android:text="@string/done"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:customFont="Gibson.otf"
            tools:targetApi="lollipop" />

    </LinearLayout>

</layout>